--- a/section_Gradient_Boosting_Variation_subsection__1.tex
+++ b/section_Gradient_Boosting_Variation_subsection__1.tex
@@ -29,7 +29,7 @@ For the moment  we  include the tree's weight $\gamma_t$ as part of the weak lea
 y =  \sum_k f_t(x) ,  \ f_t \in Tr  \ \forall t \in {0...K}
 \]
 
-where a single tree is represented in the form 
+and a single tree is represented in the form 
 
 \[
 f(x) = \theta_{q(x)} = \sum_{j=1}^J \theta_j I(x \in  R_j)
@@ -99,7 +99,6 @@ aggregating
 
 
 
-
 \subsection{sklearn}
 
 
@@ -116,4 +115,3 @@ aggregating
 \textit{}
 
 \textit{} 
-
