--- a/subsection_Extension_to_Random_Forests__.tex
+++ b/subsection_Extension_to_Random_Forests__.tex
@@ -1,4 +1,4 @@
-\subsection{Extension to Random Forests}
+\section{Tree extension to Random Forests}
 \textbf{L Breiman Paper}\cite{breiman-randomforests}
     
     Random Forests are a natural ensemble extension of Decision Trees as base learners. First described by \cite{HoFirstRandomForest} they combine a number of trees with a technique called bootstrap aggregation or \textit{bagging}. Different works have explored on low-bias and high-variance scenarios where models have low training error and high test errors. In \cite{breiman-arcingclassifiers}, a more accurate description of this problem is detailed with  real data. We cite here that, in some cases, \textit{..small perturbations in their  training  sets  or  in  construction  may  result  in  large  changes  in  the  constructed  predictor}.
