--- a/Notar_que_todo_lo_que__.tex
+++ b/Notar_que_todo_lo_que__.tex
@@ -2,11 +2,7 @@
 Notar que todo lo que esta en italica es tipo highlighter de textos de otros autores :)
 %NOTAR QUE TO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER DE OTROS TEXTOS DE OTROS AUTORES}
 
-\section{Classifier : Random Forests}
-
-Random Forests are a special type of classifier in which a set of weaker learners are used together to build a stronger classifier. The idea is to have \textit{Decision Trees} as week learners and to ensemble a group of trees together.
-
-\subsection{Decision Tree Learners}
+\section{Classifier : Decision Tree Learners}
 
 Decision Trees will not be described in detail in this work, but a brief overview can be given as follows. 
 
